# ToyC-Compiler

./: .gitignore  CMakeLists.txt  Day3更新说明.md  FrontEnd.md  Frontend.md  Makefile  README.md  Semantic.md  SemanticIntegration.md  test_basic.cpp  test_basic_english.cpp  任务要求.md  开发任务与分工.md
.github/workflows/: ci.yml
backend/: CMakeLists.txt  Makefile  README.md
backend/examples/: backend_demo.cpp
backend/include/toyc/backend/: ir.hpp  optimizer.hpp  riscv32_codegen.hpp  text_ir.hpp
backend/src/: ir.cpp  optimizer.cpp  riscv32_codegen.cpp  text_ir.cpp
backend/tests/: backend_tests.cpp  rv32_e2e.sh
backend/tests/data/: factorial.ir
backend/tools/: backend_cli.cpp
docs/: frontend.md  integration-conflicts.md  issue-report.md  report.md  实践报告.md  第一次测试数据收集.md  第三次测试数据收集.md  第二次测试数据收集.md  第四次测试数据收集.md
scripts/: run_e2e_tests.sh  run_smoke_tests.ps1  run_smoke_tests.sh  run_tests.ps1
scripts/cmake/: smoke_test.cmake
src/: main.cpp
src/ast/: AST.cpp  AST.h  ASTBase.h  AstNode.h  AstPrinter.cpp  AstPrinter.h  AstVisitor.h  CompUnit.cpp  CompUnit.h  Decl.cpp  Decl.h  Expr.cpp  Expr.h  FuncDef.cpp  FuncDef.h  Param.h  Stmt.cpp  Stmt.h  Type.cpp  Type.h
src/codegen/: AstToIr.cpp  AstToIr.h  CodeGen.h
src/ir/: Ir.h
src/lexer/: LexError.h  Lexer.cpp  Lexer.h  Token.cpp  Token.h
src/optimizer/: DOptimizer.cpp  DOptimizer.h
src/parser/: Parser.cpp  Parser.h
src/semantic/: AST.h  ConstExprEvaluator.cpp  ConstExprEvaluator.h  README.md  SemanticAnalyzer.cpp  SemanticAnalyzer.cpp.bak  SemanticAnalyzer.h  Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h  errors.h
tests/: build_test.py  test_header.inc  test_semantic.cpp  write_test.py
tests/basic/: const_expr.tc  expected.tsv  function_call.tc  global_var.tc  if_else.tc  local_var.tc  return_0.tc  return_1.tc  return_2.tc  return_3.tc  return_4.tc  return_5.tc  return_6.tc  return_7.tc  return_f0.tc  return_f1.tc  return_f6.tc  return_negative_expr.tc  short_circuit.tc  while_loop.tc
tests/control_flow/: .gitkeep  README.md  break_inner.tc  continue_loop.tc  if_else_chain.tc  nested_if.tc  nested_while.tc
tests/lexer/: README.md
tests/parser/: README.md  full_syntax.tc
tests/performance/: .gitkeep  README.md  fib_heavy.tc  loop_sum.tc
tests/semantic/: .gitkeep  README.md
tests/semantic/invalid/: 01_undecl_var.tc  01_undeclared_var.tc  02_duplicate_global.tc  02_duplicate_var.tc  03_const_reassign.tc  03_use_before_decl.tc  04_const_reassign.tc  04_duplicate_local.tc  05_const_init_undefined.tc  05_use_before_decl.tc  06_const_non_constant.tc  06_const_undefined.tc  07_divide_by_zero.tc  07_invalid_main_void.tc  08_const_nonconst_expr.tc  08_invalid_main_params.tc  09_invalid_main_1.tc  09_invalid_main_2.tc  09_invalid_main_3.tc  09_missing_return.tc  10_function_redefine.tc  10_void_as_expr.tc  11_void_call_expr.tc  11_wrong_arg_count.tc  12_break_outside_loop.tc  13_continue_outside_loop.tc  14_const_divide_by_zero.tc  14_return_in_void.tc  15_const_expr_nonconst.tc  15_div_by_zero.tc  16_duplicate_param.tc
tests/semantic/valid/: 01_empty_main.tc  02_global_const.tc  02_simple_const.tc  03_global_var.tc  04_const_chain.tc  04_const_expr_chain.tc  04_local_var.tc  05_function_with_params.tc  05_shadowing.tc  06_function_signatures.tc  06_recursive_function.tc  07_const_arithmetic.tc  07_void_function.tc  08_const_shortcircuit.tc  08_local_shadowing.tc  09_const_relations.tc  09_nested_blocks.tc  10_const_chain.tc  10_if_else_chain.tc  11_function_call.tc  11_while_loop.tc  12_logical_ops.tc  12_mixed_globals.tc  13_arithmetic_expr.tc  13_recursion.tc  14_const_with_ops.tc  14_minimal_main.tc  15_multiple_funcs.tc  15_simple_block.tc
